--- a/Pages/SLAM.html
+++ b/Pages/SLAM.html
@@ -8,350 +8,7 @@
     <meta name="description" content="Mes compétences en développement" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-            background: #000;
-            color: #fff;
-        }
-
-        /* Header */
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background: #fff;
-            z-index: 999;
-            padding: 15px 0;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-
-        .boxed {
-            max-width: 1280px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        .flex {
-            display: flex;
-        }
-
-        .aligncenter {
-            align-items: center;
-        }
-
-        .space-between {
-            justify-content: space-between;
-        }
-
-        .header-logo img {
-            width: 90px;
-            height: auto;
-        }
-
-        .header-menu {
-            display: flex;
-            list-style: none;
-            gap: 10px;
-        }
-
-        .header-menu li a {
-            text-decoration: none;
-            color: #000;
-            padding: 10px 20px;
-            transition: all 0.3s ease;
-            border-radius: 5px;
-        }
-
-        .header-menu li a:hover {
-            background-color: #000;
-            color: #fff;
-        }
-
-        .header-menu-mobile {
-            display: none;
-            background: none;
-            border: none;
-            font-size: 2rem;
-        }
-
-        /* Hero Section */
-        .slider {
-            width: 100%;
-            min-height: 60vh;
-            background: #000;
-            position: relative;
-            margin-top: 70px;
-        }
-
-        .slider-background {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            filter: brightness(30%);
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-
-        .slider-content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            z-index: 2;
-        }
-
-        .slider-content h1 {
-            color: #fff;
-            font-size: 4rem;
-            margin-bottom: 10px;
-        }
-
-        .slider-content p {
-            color: #fff;
-            font-size: 1.5rem;
-            font-weight: 300;
-        }
-
-        /* Section */
-        .section {
-            padding: 80px 0;
-        }
-
-        .section h2 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .section-intro {
-            text-align: center;
-            font-size: 1.2rem;
-            color: #ccc;
-            margin-bottom: 60px;
-            max-width: 700px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        /* Skills Category */
-        .skills-category {
-            margin-bottom: 60px;
-        }
-
-        .category-header {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            margin-bottom: 30px;
-            padding-bottom: 15px;
-            border-bottom: 2px solid #333;
-        }
-
-        .category-icon {
-            font-size: 2.5rem;
-            color: #fff;
-        }
-
-        .category-title {
-            font-size: 2rem;
-            font-weight: 600;
-        }
-
-        /* Skills Grid */
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 25px;
-        }
-
-        .skill-card {
-            background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
-            border-radius: 15px;
-            padding: 25px;
-            transition: all 0.3s ease;
-            border: 1px solid #333;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .skill-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(255, 255, 255, 0.2);
-            border-color: #fff;
-        }
-
-        .skill-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 15px;
-        }
-
-        .skill-name {
-            font-size: 1.3rem;
-            font-weight: 600;
-            color: #fff;
-        }
-
-        .skill-level {
-            background: rgba(255, 255, 255, 0.2);
-            color: #fff;
-            padding: 5px 12px;
-            border-radius: 20px;
-            font-size: 0.85rem;
-            font-weight: 600;
-        }
-
-        .skill-description {
-            color: #ccc;
-            font-size: 0.95rem;
-            line-height: 1.6;
-            margin-bottom: 15px;
-        }
-
-        .skill-tags {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 8px;
-        }
-
-        .skill-tag {
-            background: rgba(255, 255, 255, 0.1);
-            color: #fff;
-            padding: 5px 12px;
-            border-radius: 15px;
-            font-size: 0.8rem;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-        }
-
-        /* Contact Section */
-        .section.contact {
-            background: #0a0a0a;
-            border-top: 1px solid #333;
-        }
-
-        .contact-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
-            margin-top: 40px;
-        }
-
-        .contact-item {
-            border: 2px dashed #fff;
-            border-radius: 15px;
-            padding: 30px;
-            text-align: center;
-            transition: all 0.3s ease;
-        }
-
-        .contact-item:hover {
-            border-style: solid;
-            background: rgba(255,255,255,0.05);
-            border-color: #fff;
-        }
-
-        .contact-item .material-symbols-outlined {
-            font-size: 3rem;
-            display: block;
-            margin-bottom: 15px;
-        }
-
-        .contact-item .label {
-            font-weight: 700;
-            text-transform: uppercase;
-            margin: 10px 0;
-            font-size: 1.2rem;
-        }
-
-        .contact-item .value {
-            font-size: 1rem;
-            color: #ccc;
-        }
-
-        .contact-item a {
-            color: #fff;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .contact-item a:hover {
-            color: #ccc;
-            text-decoration: underline;
-        }
-
-        /* Navigation Buttons */
-        .navigation-buttons {
-            text-align: center;
-            margin-top: 40px;
-            padding: 30px 0;
-            border-top: 1px solid #333;
-        }
-
-        .navigation-buttons button {
-            padding: 15px 30px;
-            margin: 0 10px;
-            font-size: 1.1rem;
-            font-weight: 600;
-            color: #fff;
-            background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
-            border: 2px solid #fff;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .navigation-buttons button:hover {
-            background: #fff;
-            color: #000;
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(255, 255, 255, 0.3);
-        }
-
-        /* Responsive */
-        @media(max-width: 810px) {
-            .header-menu {
-                display: none;
-            }
-
-            .header-menu-mobile {
-                display: block;
-            }
-
-            .slider-content h1 {
-                font-size: 2.5rem;
-            }
-
-            .section h2 {
-                font-size: 2rem;
-            }
-
-            .skills-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .category-header {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .navigation-buttons button {
-                display: block;
-                width: 90%;
-                margin: 10px auto;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/styles/slam.css" type="text/css">
 </head>
 
 <body>
