--- a/Pages/Tableau-de-synthèse.html
+++ b/Pages/Tableau-de-synthèse.html
@@ -8,445 +8,7 @@
     <meta name="description" content="Mon tableau de synthèse BTS SIO" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-            background: #f5f5f5;
-        }
-
-        /* Header */
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background: #fff;
-            z-index: 999;
-            padding: 15px 0;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-
-        .boxed {
-            max-width: 1280px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        .flex {
-            display: flex;
-        }
-
-        .aligncenter {
-            align-items: center;
-        }
-
-        .space-between {
-            justify-content: space-between;
-        }
-
-        .header-logo img {
-            width: 90px;
-            height: auto;
-        }
-
-        .header-menu {
-            display: flex;
-            list-style: none;
-            gap: 10px;
-        }
-
-        .header-menu li a {
-            text-decoration: none;
-            color: #000;
-            padding: 10px 20px;
-            transition: all 0.3s ease;
-            border-radius: 5px;
-        }
-
-        .header-menu li a:hover {
-            background-color: #000;
-            color: #fff;
-        }
-
-        .header-menu-mobile {
-            display: none;
-            background: none;
-            border: none;
-            font-size: 2rem;
-        }
-
-        /* Hero Section */
-        .slider {
-            width: 100%;
-            min-height: 60vh;
-            background: #000;
-            position: relative;
-            margin-top: 70px;
-        }
-
-        .slider-background {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            filter: brightness(30%);
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-
-        .slider-content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            z-index: 2;
-        }
-
-        .slider-content h1 {
-            color: #fff;
-            font-size: 4rem;
-            margin-bottom: 10px;
-        }
-
-        .slider-content p {
-            color: #fff;
-            font-size: 1.5rem;
-            font-weight: 300;
-        }
-
-        /* Section */
-        .section {
-            padding: 80px 0;
-            background: #fff;
-        }
-
-        .section h2 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-            text-align: center;
-            color: #000;
-        }
-
-        .section-intro {
-            text-align: center;
-            font-size: 1.2rem;
-            color: #666;
-            margin-bottom: 60px;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
-            line-height: 1.8;
-        }
-
-        /* Tableau Card */
-        .tableau-container {
-            max-width: 900px;
-            margin: 0 auto;
-        }
-
-        .tableau-card {
-            background: #fff;
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.1);
-            transition: all 0.3s ease;
-            margin-bottom: 40px;
-        }
-
-        .tableau-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 50px rgba(0,0,0,0.15);
-        }
-
-        .tableau-image-container {
-            width: 100%;
-            background: #f9f9f9;
-            padding: 20px;
-            border-bottom: 3px solid #000;
-        }
-
-        .tableau-image {
-            width: 100%;
-            height: auto;
-            display: block;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-            border-radius: 8px;
-        }
-
-        .tableau-image:hover {
-            transform: scale(1.02);
-        }
-
-        .tableau-info {
-            padding: 40px;
-            text-align: center;
-        }
-
-        .tableau-info h3 {
-            font-size: 1.8rem;
-            margin-bottom: 15px;
-            color: #000;
-        }
-
-        .tableau-info p {
-            font-size: 1.1rem;
-            color: #666;
-            line-height: 1.8;
-            margin-bottom: 30px;
-        }
-
-        /* Features Grid */
-        .features-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin: 40px 0;
-        }
-
-        .feature-item {
-            text-align: center;
-            padding: 20px;
-            background: #f9f9f9;
-            border-radius: 10px;
-            transition: all 0.3s ease;
-        }
-
-        .feature-item:hover {
-            background: #000;
-            color: #fff;
-            transform: translateY(-3px);
-        }
-
-        .feature-item .material-symbols-outlined {
-            font-size: 3rem;
-            margin-bottom: 10px;
-            display: block;
-        }
-
-        .feature-item h4 {
-            font-size: 1.1rem;
-            font-weight: 600;
-        }
-
-        /* Download Button */
-        .download-section {
-            text-align: center;
-            margin-top: 40px;
-        }
-
-        .download-button {
-            display: inline-flex;
-            align-items: center;
-            gap: 10px;
-            padding: 18px 40px;
-            background-color: #000;
-            color: white;
-            text-decoration: none;
-            font-size: 1.2rem;
-            font-weight: 600;
-            border-radius: 10px;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-        }
-
-        .download-button:hover {
-            background-color: #333;
-            transform: translateY(-3px);
-            box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-        }
-
-        .download-button .material-symbols-outlined {
-            font-size: 1.5rem;
-        }
-
-        /* Info Cards */
-        .info-cards {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 25px;
-            margin-top: 60px;
-        }
-
-        .info-card {
-            background: #f9f9f9;
-            border-radius: 12px;
-            padding: 30px;
-            border-left: 4px solid #000;
-            transition: all 0.3s ease;
-        }
-
-        .info-card:hover {
-            background: #fff;
-            box-shadow: 0 5px 20px rgba(0,0,0,0.1);
-            transform: translateX(5px);
-        }
-
-        .info-card h4 {
-            font-size: 1.4rem;
-            margin-bottom: 15px;
-            color: #000;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .info-card h4 .material-symbols-outlined {
-            font-size: 1.8rem;
-        }
-
-        .info-card p {
-            color: #666;
-            line-height: 1.7;
-            font-size: 1rem;
-        }
-
-        .info-card ul {
-            list-style: none;
-            padding-left: 0;
-            margin-top: 15px;
-        }
-
-        .info-card ul li {
-            padding: 8px 0;
-            color: #666;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .info-card ul li:before {
-            content: "→";
-            font-weight: bold;
-            color: #000;
-        }
-
-        /* Contact Section */
-        .section.dark {
-            background: #000;
-            color: #fff;
-        }
-
-        .contact-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
-            margin-top: 40px;
-        }
-
-        .contact-item {
-            border: 2px dashed #fff;
-            border-radius: 15px;
-            padding: 30px;
-            text-align: center;
-            transition: all 0.3s ease;
-        }
-
-        .contact-item:hover {
-            border-style: solid;
-            background: rgba(255,255,255,0.05);
-        }
-
-        .contact-item .material-symbols-outlined {
-            font-size: 3rem;
-            display: block;
-            margin-bottom: 15px;
-        }
-
-        .contact-item .label {
-            font-weight: 700;
-            text-transform: uppercase;
-            margin: 10px 0;
-            font-size: 1.2rem;
-        }
-
-        .contact-item .value {
-            font-size: 1rem;
-            color: #ccc;
-        }
-
-        .contact-item a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        .contact-item a:hover {
-            text-decoration: underline;
-        }
-
-        /* Navigation Buttons */
-        .navigation-buttons {
-            text-align: center;
-            margin-top: 40px;
-            padding: 30px 0;
-            background-color: #f9f9f9;
-            border-top: 2px solid #ddd;
-        }
-
-        .navigation-buttons button {
-            padding: 15px 30px;
-            margin: 0 10px;
-            font-size: 1.1rem;
-            font-weight: 600;
-            color: #fff;
-            background-color: #000;
-            border: 2px solid #000;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .navigation-buttons button:hover {
-            background-color: #fff;
-            color: #000;
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-        }
-
-        /* Responsive */
-        @media(max-width: 810px) {
-            .header-menu {
-                display: none;
-            }
-
-            .header-menu-mobile {
-                display: block;
-            }
-
-            .slider-content h1 {
-                font-size: 2.5rem;
-            }
-
-            .section h2 {
-                font-size: 2rem;
-            }
-
-            .tableau-info {
-                padding: 25px;
-            }
-
-            .features-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .info-cards {
-                grid-template-columns: 1fr;
-            }
-
-            .navigation-buttons button {
-                display: block;
-                width: 90%;
-                margin: 10px auto;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/styles/tableauDeSynthèse.css" type="text/css">
 </head>
 
 <body>
